Fix scrollbar on subject list

--- a/client-app/src/components/pages/Home.module.scss
+++ b/client-app/src/components/pages/Home.module.scss
@@ -53,7 +53,7 @@
     display: flex;
     flex-flow: column nowrap;
     max-height: 50vh;
-    overflow: scroll;
+    overflow-y: auto;
     align-items: stretch;
     gap: 0.5em;
     padding: 0;
